Bug #8703 insert into table select from view crashes
Submitted: 22 Feb 2005 19:05 Modified: 12 Apr 2005 4:35
Reporter: Georg Richter
Status: Closed
Category:Server Severity:S1 (Critical)
Version:5.0.3 OS:Linux (Linux)
Assigned to: Bugs System Target Version:

[22 Feb 2005 19:05] Georg Richter
Description:
see how to repeat

How to repeat:
create table t1 (a int);
create table t2 like t1;
create table t3 like t1;

create view v1 as select t1.a x, t2.a y from t1 join t2 where t1.a=t2.a;

/*ERROR 2013 (HY000): Lost connection to MySQL server during query */
insert into t3 select x from v1;
[23 Feb 2005 6:42] Georg Richter
also a simple select crashes:

select * from v1;
ERROR 2013 (HY000): Lost connection to MySQL server during query
[28 Mar 2005 8:27] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/23405
[28 Mar 2005 14:14] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/23412
[28 Mar 2005 14:18] Oleksandr Byelkin
ChangeSet
  1.1845 05/03/28 15:13:31 bell@sanja.is.com.ua +15 -0
  fixed mechanism of detection selection from table wich we update
  (BUG##9398, BUG#8703)
  fixed wrong join view detection in multi-delete which lead to server crash
[3 Apr 2005 0:24] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/23588
[3 Apr 2005 22:17] Oleksandr Byelkin
Thank you for bugreport.
Bugfix was pushed into 5.0.4 source tree.
[12 Apr 2005 4:35] Paul DuBois
Noted in 5.0.4 changelog.