fixed mechanism of detection selection from table wich we update (BUG##9398, BUG#8703) fixed wrong join view detection in multi-delete which lead to server crash